bugfix/arrow-jumping-on-hover-add-padding

--- a/style/elements/_animated-arrow.scss
+++ b/style/elements/_animated-arrow.scss
@@ -4,16 +4,18 @@
   justify-content: center;
   column-gap: 5px;
   max-width: 170px;
+  padding: 15px;
   cursor: pointer;
+
   &__arrow {
     transform: rotate(-136deg);
     display: block;
     width: 15px;
-    height: 15px;
+    height: 13px;
     border-top: 3px solid #000;
     border-left: 3px solid #000;
-    transform: 2s ease;
     cursor: pointer;
+    transition: 0.3s ease;
 
     &::before {
       content: '';
